--- a/hugo.toml
+++ b/hugo.toml
@@ -27,3 +27,10 @@ weight = "5"
 name = "Searchpage"
 url = "http://localhost:1313/Searchpage"
 wegith = "5"
+
+[markup]
+  [markup.goldmark]
+    [markup.goldmark.renderer]
+      unsafe = true
+    [markup.goldmark.parser]
+      attribute = true
